--- a/Presentation/HelpDesk.WorkerWebApp/Resources/Resource.resx
+++ b/Presentation/HelpDesk.WorkerWebApp/Resources/Resource.resx
@@ -447,4 +447,16 @@
   <data name="Action_Add" xml:space="preserve">
     <value>Добавить</value>
   </data>
+  <data name="Action_Edit" xml:space="preserve">
+    <value>Редактировать</value>
+  </data>
+  <data name="Title_Refresh" xml:space="preserve">
+    <value>Обновить</value>
+  </data>
+  <data name="Text_EditRecord" xml:space="preserve">
+    <value>Редактирование</value>
+  </data>
+  <data name="Text_NewRecord" xml:space="preserve">
+    <value>Новая запись</value>
+  </data>
 </root>
