Динамический placeholder для input id=objectName на форме подачи заявки

--- a/Presentation/HelpDesk.WorkerWebApp/Resources/Resource.resx
+++ b/Presentation/HelpDesk.WorkerWebApp/Resources/Resource.resx
@@ -468,4 +468,7 @@
   <data name="Label_Archive" xml:space="preserve">
     <value>Архив</value>
   </data>
+  <data name="Placeholder_EmployeeObjectName2" xml:space="preserve">
+    <value>Выберите объект заявки сотрудника</value>
+  </data>
 </root>
