--- a/Presentation/HelpDesk.CabinetWebApp/Resources/Resource.resx
+++ b/Presentation/HelpDesk.CabinetWebApp/Resources/Resource.resx
@@ -429,4 +429,11 @@
   <data name="ErrorMessage_MinFileSizeConstraint" xml:space="preserve">
     <value>Слишком маленький размер файла</value>
   </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="Img_Excel" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>excel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Img_Word" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>word.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
