--- a/HelpDesk.DataService.Common/DTO/Resources/Resource.resx
+++ b/HelpDesk.DataService.Common/DTO/Resources/Resource.resx
@@ -117,22 +117,34 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Name_Model" xml:space="preserve">
-    <value>модель</value>
+  <data name="StatusRequestEnum_Accepted" xml:space="preserve">
+    <value>Принята в работу</value>
   </data>
-  <data name="Name_PhoneShort" xml:space="preserve">
-    <value>тел.</value>
+  <data name="StatusRequestEnum_ApprovedComplete" xml:space="preserve">
+    <value>Выполнена</value>
   </data>
-  <data name="Name_WareIS" xml:space="preserve">
-    <value>ПО</value>
+  <data name="StatusRequestEnum_Closing" xml:space="preserve">
+    <value>Закрыта исполнителем</value>
   </data>
-  <data name="Name_WareTO" xml:space="preserve">
-    <value>Оборудование</value>
+  <data name="StatusRequestEnum_ExtendedConfirmation" xml:space="preserve">
+    <value>Перенос готовности</value>
   </data>
-  <data name="Name_WorkTypeWareIS" xml:space="preserve">
-    <value>Сопровождение ИС</value>
+  <data name="StatusRequestEnum_ExtendedDeadLine" xml:space="preserve">
+    <value>Перенос срока</value>
   </data>
-  <data name="Name_WorkTypeWareTO" xml:space="preserve">
-    <value>ТО ВТ и КМТ</value>
+  <data name="StatusRequestEnum_New" xml:space="preserve">
+    <value>Новая</value>
+  </data>
+  <data name="StatusRequestEnum_NotApprovedComplete" xml:space="preserve">
+    <value>Не подтверждена готовность</value>
+  </data>
+  <data name="StatusRequestEnum_Passive" xml:space="preserve">
+    <value>Пассив</value>
+  </data>
+  <data name="StatusRequestEnum_Rejected" xml:space="preserve">
+    <value>Отказано</value>
+  </data>
+  <data name="StatusRequestEnum_Unknown" xml:space="preserve">
+    <value>Состояние не определено</value>
   </data>
 </root>
