Настройка подписки в личном кабинете

--- a/Presentation/HelpDesk.CabinetWebApp/Resources/Resource.resx
+++ b/Presentation/HelpDesk.CabinetWebApp/Resources/Resource.resx
@@ -414,4 +414,13 @@
   <data name="Label_Archive" xml:space="preserve">
     <value>Архив</value>
   </data>
+  <data name="Menu_Subscribe" xml:space="preserve">
+    <value>Подписка</value>
+  </data>
+  <data name="Label_SubscribeRequestState" xml:space="preserve">
+    <value>Получать уведомления о событиях заявки</value>
+  </data>
+  <data name="Label_EmailSubscribe" xml:space="preserve">
+    <value>Получать рассылку на E-mail</value>
+  </data>
 </root>
