Обработка при сохранении сведений о сотруднике ситуаций, когда эти сведения внесены в систему (из личного кабинета или АРМ Диспетчера) ранее

--- a/HelpDesk.DataService/Resources/Resource.resx
+++ b/HelpDesk.DataService/Resources/Resource.resx
@@ -258,4 +258,7 @@
   <data name="September" xml:space="preserve">
     <value>Сентябрь</value>
   </data>
+  <data name="UniqueEmployeeConstraintMsg" xml:space="preserve">
+    <value>Сотрудник с указанными данными уже существует в системе. Если это действительно Ваши данные, обратитесь в службу поддержки системы</value>
+  </data>
 </root>
