--- a/Services/HelpDesk.ConsumerEventSrvice/Resources/Resource.resx
+++ b/Services/HelpDesk.ConsumerEventSrvice/Resources/Resource.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AppName" xml:space="preserve">
-    <value>HelpDesk</value>
+    <value>help-desk</value>
   </data>
   <data name="Subject_RequestAppEventConsumer" xml:space="preserve">
     <value>Заявка №{0} ({1})</value>
